--- a/ch05/dr_spock.ipynb
+++ b/ch05/dr_spock.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Percent</th>\n",
+       "      <th>Judge</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>6.4</td>\n",
+       "      <td>Spock's</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>8.7</td>\n",
+       "      <td>Spock's</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>13.3</td>\n",
+       "      <td>Spock's</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>13.6</td>\n",
+       "      <td>Spock's</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>15.0</td>\n",
+       "      <td>Spock's</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Percent    Judge\n",
+       "0      6.4  Spock's\n",
+       "1      8.7  Spock's\n",
+       "2     13.3  Spock's\n",
+       "3     13.6  Spock's\n",
+       "4     15.0  Spock's"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "path = pathlib.Path.home() / 'data' / 'sleuth3' / 'case0502.csv'\n",
+    "df = pd.read_csv(path)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -102,14 +182,12 @@
        "max       48.9"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "path = pathlib.Path.home() / 'data' / 'sleuth3' / 'case0502.csv'\n",
-    "df = pd.read_csv(path)\n",
     "df.describe()"
    ]
   },
@@ -300,6 +378,85 @@
    ],
    "source": [
     "sns.boxplot(x='Judge', y='Percent', data=df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\it{H_0}:  \\mu_{Spock} = \\mu_A = \\mu_B = \\mu_C = \\mu_D = \\mu_E = \\mu_F$\n",
+    "\n",
+    "$\\it{H_a}:$  at least one $\\mu$ is different"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3791.526086956522, 45)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mu = df.Percent.mean()\n",
+    "ss_reduced = ((df.Percent - mu) ** 2).sum()\n",
+    "dof_reduced = len(df) - 1\n",
+    "ss_reduced, dof_reduced"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1864.4452222222221, 32)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ss_full = 0\n",
+    "dofs = []\n",
+    "for idx, g in df.groupby('Judge'):\n",
+    "    ss_full += ((g.Percent - g.Percent.mean()) ** 2).sum()\n",
+    "    dofs.append(len(g) -1)\n",
+    "dof_full = sum(dofs) - len(dofs)\n",
+    "ss_full, dof_full"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1927.0808647342997"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ss_extra = ss_reduced - ss_full\n",
+    "ss_extra"
    ]
   },
   {
