--- a/ch09/flowers.ipynb
+++ b/ch09/flowers.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
        "4     49.6     1        450"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
        "max    78.000000   2.000000  900.000000"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
        "Text(0.5, 0, 'Light Intensity ($\\\\mu\\\\mathrm{mol/m^2/sec}$)')"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -269,6 +269,54 @@
    "metadata": {},
    "source": [
     "The display above shows the fit of a multiple linear regression model that specifies parallel regression lines for the mean number of flowers as functions of light intensity.  Increasing light intensity decreased the mean number of flowers per plant by an estimated 4.0 flowers per plant per 100 $\\mu\\mathrm{mol/m^2/sec}$ (95% confidence interval from 3.0 to 5.1).  Beginning the light treatments 24 days prior to PFI increased the mean number of flowers from 6.7 to 17.6).  The data provide no evidence that the effect of light intensity depends on the timing of its initiation (two-sided p-value = 0.91, from a $t$-test for interaction, 20 degrees of freedom)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                Flowers   R-squared:                       0.799\n",
+      "Model:                            OLS   Adj. R-squared:                  0.769\n",
+      "Method:                 Least Squares   F-statistic:                     26.55\n",
+      "Date:                Sun, 08 Sep 2019   Prob (F-statistic):           3.55e-07\n",
+      "Time:                        12:07:41   Log-Likelihood:                -77.149\n",
+      "No. Observations:                  24   AIC:                             162.3\n",
+      "Df Residuals:                      20   BIC:                             167.0\n",
+      "Df Model:                           3                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "===========================================================================================\n",
+      "                              coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "-------------------------------------------------------------------------------------------\n",
+      "Intercept                  83.1467      4.343     19.144      0.000      74.087      92.207\n",
+      "early[T.True]             -11.5233      6.142     -1.876      0.075     -24.336       1.289\n",
+      "Intensity                  -0.0399      0.007     -5.362      0.000      -0.055      -0.024\n",
+      "early[T.True]:Intensity    -0.0012      0.011     -0.115      0.910      -0.023       0.021\n",
+      "==============================================================================\n",
+      "Omnibus:                        3.028   Durbin-Watson:                   2.927\n",
+      "Prob(Omnibus):                  0.220   Jarque-Bera (JB):                1.394\n",
+      "Skew:                           0.181   Prob(JB):                        0.498\n",
+      "Kurtosis:                       1.876   Cond. No.                     3.49e+03\n",
+      "==============================================================================\n",
+      "\n",
+      "Warnings:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+      "[2] The condition number is large, 3.49e+03. This might indicate that there are\n",
+      "strong multicollinearity or other numerical problems.\n"
+     ]
+    }
+   ],
+   "source": [
+    "df['early'] = df.Time == 1\n",
+    "model = smf.ols('Flowers ~ early + Intensity + early*Intensity', data=df)\n",
+    "results = model.fit()\n",
+    "print(results.summary())"
    ]
   },
   {
