--- a/ch10/bats.ipynb
+++ b/ch10/bats.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,6 @@
     "import scipy.stats\n",
     "import seaborn as sns\n",
     "import statsmodels.formula.api as smf\n",
-    "from statsmodels.sandbox.regression.predstd import wls_prediction_std\n",
     "\n",
     "sns.set()"
    ]
@@ -42,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +114,7 @@
        "4   24.3  non-echolocating birds    2.46"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +212,7 @@
        "max    779.000000  43.700000"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,16 +224,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a1dbcb190>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a238706d0>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -267,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -279,24 +278,24 @@
       "Dep. Variable:         np.log(Energy)   R-squared:                       0.982\n",
       "Model:                            OLS   Adj. R-squared:                  0.978\n",
       "Method:                 Least Squares   F-statistic:                     283.6\n",
-      "Date:                Tue, 10 Sep 2019   Prob (F-statistic):           4.46e-14\n",
-      "Time:                        14:16:42   Log-Likelihood:                 7.4968\n",
+      "Date:                Sun, 15 Sep 2019   Prob (F-statistic):           4.46e-14\n",
+      "Time:                        11:57:48   Log-Likelihood:                 7.4968\n",
       "No. Observations:                  20   AIC:                            -6.994\n",
       "Df Residuals:                      16   BIC:                            -3.011\n",
       "Df Model:                           3                                         \n",
       "Covariance Type:            nonrobust                                         \n",
-      "=====================================================================================================\n",
-      "                                        coef    std err          t      P>|t|      [0.025      0.975]\n",
-      "-----------------------------------------------------------------------------------------------------\n",
-      "Intercept                            -1.4977      0.150     -9.993      0.000      -1.815      -1.180\n",
-      "C(Type)[T.non-echolocating bats]     -0.0787      0.203     -0.388      0.703      -0.508       0.351\n",
-      "C(Type)[T.non-echolocating birds]     0.0236      0.158      0.150      0.883      -0.310       0.358\n",
-      "np.log(Mass)                          0.8150      0.045     18.297      0.000       0.721       0.909\n",
+      "===================================================================================================================================================\n",
+      "                                                                                      coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "---------------------------------------------------------------------------------------------------------------------------------------------------\n",
+      "Intercept                                                                          -1.5764      0.287     -5.488      0.000      -2.185      -0.967\n",
+      "C(Type, Treatment(reference='non-echolocating bats'))[T.echolocating bats]          0.0787      0.203      0.388      0.703      -0.351       0.508\n",
+      "C(Type, Treatment(reference='non-echolocating bats'))[T.non-echolocating birds]     0.1023      0.114      0.896      0.384      -0.140       0.344\n",
+      "np.log(Mass)                                                                        0.8150      0.045     18.297      0.000       0.721       0.909\n",
       "==============================================================================\n",
       "Omnibus:                        1.592   Durbin-Watson:                   1.982\n",
       "Prob(Omnibus):                  0.451   Jarque-Bera (JB):                1.306\n",
       "Skew:                           0.466   Prob(JB):                        0.520\n",
-      "Kurtosis:                       2.163   Cond. No.                         32.1\n",
+      "Kurtosis:                       2.163   Cond. No.                         44.2\n",
       "==============================================================================\n",
       "\n",
       "Warnings:\n",
@@ -305,10 +304,297 @@
     }
    ],
    "source": [
-    "model = smf.ols('np.log(Energy) ~ np.log(Mass) + C(Type)', data=df)\n",
+    "formula = \"np.log(Energy) ~ np.log(Mass) + C(Type, Treatment(reference='non-echolocating bats'))\"\n",
+    "model = smf.ols(formula, data=df)\n",
     "results = model.fit()\n",
     "print(results.summary())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Do non-echolocating bats differ from echolocating bats?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>coef</th>\n",
+       "      <th>standard error</th>\n",
+       "      <th>t-statistic</th>\n",
+       "      <th>two-sided p-value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>Constant:  $\\beta_0$</td>\n",
+       "      <td>-1.576</td>\n",
+       "      <td>0.287</td>\n",
+       "      <td>-5.488</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>echolocating bats: $\\beta_2$</td>\n",
+       "      <td>0.079</td>\n",
+       "      <td>0.203</td>\n",
+       "      <td>0.388</td>\n",
+       "      <td>0.703</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>non-echolocating birds:  $\\beta_3$</td>\n",
+       "      <td>0.102</td>\n",
+       "      <td>0.114</td>\n",
+       "      <td>0.896</td>\n",
+       "      <td>0.384</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>lmass:  $\\beta_1$</td>\n",
+       "      <td>0.815</td>\n",
+       "      <td>0.045</td>\n",
+       "      <td>18.297</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                     coef  standard error  t-statistic  two-sided p-value\n",
+       "Constant:  $\\beta_0$               -1.576           0.287       -5.488              0.000\n",
+       "echolocating bats: $\\beta_2$        0.079           0.203        0.388              0.703\n",
+       "non-echolocating birds:  $\\beta_3$  0.102           0.114        0.896              0.384\n",
+       "lmass:  $\\beta_1$                   0.815           0.045       18.297              0.000"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.options.display.float_format = \"{:.3f}\".format\n",
+    "df1 = pd.concat((results.params, results.bse, results.tvalues, results.pvalues), axis='columns')\n",
+    "df1.index = ['Constant:  $\\\\beta_0$', 'echolocating bats: $\\\\beta_2$', 'non-echolocating birds:  $\\\\beta_3$', 'lmass:  $\\\\beta_1$']\n",
+    "df1.columns = ['coef', 'standard error', 't-statistic', 'two-sided p-value']\n",
+    "df1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the parallel regression lines model for log energy on log mass, the mean log energy for non-echolocating bats is $\\beta_0 + \\beta_1 lmass$.  The mean log energy for echolocating bats is $\\beta_0 + \\beta_1 lmass + \\beta_2$.  The question as to whether the mean log energy for echolocating bats is the same for non-echolocating bats of similar size may be examined through a test of the hypothesis that $\\beta_2$ is zero.  The $p$-value obtained is 0.703, providing no reason to doubt that $\\beta_2$ is 0."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Is there any evidence that echolocating bats, non-echolocating bats, and birds differ from each other after accounting for body mass?\n",
+    "\n",
+    "## Fit the full model: $\\mu\\{lenergy|lmass,TYPE\\} = \\beta_0 + \\beta_1 lmass + \\beta_2 bird + \\beta_3 ebat$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.553317534724656 16.0 0.034582345920291\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(results.ssr, results.df_resid, results.mse_resid)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sum of squared residuals = 0.55332, d.f. = 16, $\\hat{\\sigma}^2$ = 0.03458"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fit the REDUCED model:  $\\mu\\{lenergy|lmass,TYPE\\} = \\beta_0 + \\beta_1 lmass$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5828911268810113 18.0 0.032382840382278406\n"
+     ]
+    }
+   ],
+   "source": [
+    "formula = \"np.log(Energy) ~ np.log(Mass)\"\n",
+    "model_reduced = smf.ols(formula, data=df)\n",
+    "results_reduced = model_reduced.fit()\n",
+    "print(results_reduced.ssr, results_reduced.df_resid, results_reduced.mse_resid)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sum of squared residuals = 0.58289, d.f. = 18"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## The extra sum of squares is the difference between the two residual sums of squares."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.029573592156355355\n"
+     ]
+    }
+   ],
+   "source": [
+    "extra_ss = results_reduced.ssr - results.ssr\n",
+    "print(extra_ss)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Numerator degrees of freedom are the number of $\\beta$'s in the full model minus the number of $\\beta$'s in the reduced model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "ddof = results_reduced.df_resid - results.df_resid\n",
+    "print(ddof)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Calculate the F-statistic."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.42758221528001106"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f = (extra_ss / ddof) / results.mse_resid\n",
+    "f"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Find $Pr(F_{2,16} > 0.428)$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.659319487159171"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 - scipy.stats.f.cdf(f,2,16) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Conclusion:  There is no evidence that mean log energy differs for birds, echolocating bats, and non-echolocating bats, after acounting for body mass."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
