--- a/ch12/descrimination.ipynb
+++ b/ch12/descrimination.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1c1d7fc6d0>"
+       "<seaborn.axisgrid.PairGrid at 0x1c23576ad0>"
       ]
      },
      "execution_count": 5,
@@ -307,7 +307,90 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Bsal* suggests a possible non-linear relationship.  Perhaps a log-transformation is in order here."
+    "*Bsal* suggests a possible non-linear relationship.  Perhaps a log-transformation is in order here, so the endogenous term will be `np.log(Bsal)`.  The interesting/tedious part will be to construct all the formulae out of all the combinations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2314\n"
+     ]
+    }
+   ],
+   "source": [
+    "endogenous = \"np.log(Bsal)\"\n",
+    "\n",
+    "# Single terms\n",
+    "single = [x for x in df.columns[1:] if x != 'Sex']\n",
+    "\n",
+    "# Create all the formulae out of the single terms\n",
+    "import itertools\n",
+    "formulae = []\n",
+    "for i in range(1, len(single) + 1):\n",
+    "    for iterms in itertools.combinations(single, i):\n",
+    "        exogeneous = ' + '.join(iterms)\n",
+    "        formulae.append(exogeneous)\n",
+    "\n",
+    "# It's not good to include a quadratic term unless the corresponding first order term is\n",
+    "# also present.                                                                    \n",
+    "quadformulae = []                                                                  \n",
+    "for formula in formulae:                                                           \n",
+    "    terms = [x for x in formula.split(' + ')]                                                \n",
+    "    for i in range(1, len(terms) + 1):                                             \n",
+    "        for iterms in itertools.combinations(terms, i):                            \n",
+    "            exogeneous_extra = ' + '.join([f'np.power({item}, 2)' for item in iterms])\n",
+    "            exogeneous = f\"{formula} + {exogeneous_extra}\"                         \n",
+    "            quadformulae.append(exogeneous)                                        \n",
+    "                                                                                   \n",
+    "formulae = formulae + quadformulae                                                 \n",
+    "\n",
+    "# Ditto for the mixed terms.                                                       \n",
+    "mixedformulae = []                                                                 \n",
+    "for formula in formulae:                                                           \n",
+    "    terms = [term for term in formula.split(' + ') if 'np.pow' not in term]        \n",
+    "    if len(terms) < 2:                                                             \n",
+    "        continue                                                                   \n",
+    "    for i in range(2, len(terms) + 1):                                             \n",
+    "        for iterms in itertools.combinations(terms, i):                            \n",
+    "            exogeneous_extra = ' + '.join([f'{item[0]}:{item[1]}' for item in itertools.combinations(iterms, 2)])\n",
+    "            exogeneous = f\"{formula} + {exogeneous_extra}\"                         \n",
+    "            mixedformulae.append(exogeneous)                                       \n",
+    "                                                                                   \n",
+    "formulae = formulae + mixedformulae                                                \n",
+    "print(len(formulae))\n",
+    "\n",
+    "formulae = [f\"np.log(Bsal) ~ {formula}\" for formula in formulae]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aics = []\n",
+    "bics = []\n",
+    "fvalues = []\n",
+    "for formula in formulae:\n",
+    "    model_fit = smf.ols(formula=formula, data=df).fit()\n",
+    "    aics.append(model_fit.aic)\n",
+    "    bics.append(model_fit.bic)\n",
+    "    fvalues.append(model_fit.fvalue)\n",
+    "\n",
+    "dfcp = pd.DataFrame({'formula': formulae, 'aic': aics, 'bic': bics, 'fvalue': fvalues})\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now run statsmodels on all the formulae!"
    ]
   },
   {
