--- a/ch12/descrimination.ipynb
+++ b/ch12/descrimination.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
        "4  6000  12300  Male      66  351    12 56.000"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
        "max   8100.000 16320.000  98.000 774.000 16.000 381.000"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,16 +275,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1c23576ad0>"
+       "<seaborn.axisgrid.PairGrid at 0x1c25c9f5d0>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -312,22 +312,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2314\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "endogenous = \"np.log(Bsal)\"\n",
     "\n",
     "# Single terms\n",
-    "single = [x for x in df.columns[1:] if x != 'Sex']\n",
+    "single = [x for x in df.columns[1:] if x not in ['Sal77', 'Sex']]\n",
     "\n",
     "# Create all the formulae out of the single terms\n",
     "import itertools\n",
@@ -335,8 +327,15 @@
     "for i in range(1, len(single) + 1):\n",
     "    for iterms in itertools.combinations(single, i):\n",
     "        exogeneous = ' + '.join(iterms)\n",
-    "        formulae.append(exogeneous)\n",
-    "\n",
+    "        formulae.append(exogeneous)                                                \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# It's not good to include a quadratic term unless the corresponding first order term is\n",
     "# also present.                                                                    \n",
     "quadformulae = []                                                                  \n",
@@ -348,8 +347,23 @@
     "            exogeneous = f\"{formula} + {exogeneous_extra}\"                         \n",
     "            quadformulae.append(exogeneous)                                        \n",
     "                                                                                   \n",
-    "formulae = formulae + quadformulae                                                 \n",
-    "\n",
+    "formulae = formulae + quadformulae  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "408\n"
+     ]
+    }
+   ],
+   "source": [
     "# Ditto for the mixed terms.                                                       \n",
     "mixedformulae = []                                                                 \n",
     "for formula in formulae:                                                           \n",
@@ -365,14 +379,95 @@
     "formulae = formulae + mixedformulae                                                \n",
     "print(len(formulae))\n",
     "\n",
-    "formulae = [f\"np.log(Bsal) ~ {formula}\" for formula in formulae]"
+    "formulae = [f\"np.log(Bsal) ~ Sex + {formula}\" for formula in formulae]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>formula</th>\n",
+       "      <th>aic</th>\n",
+       "      <th>bic</th>\n",
+       "      <th>fvalue</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>53</td>\n",
+       "      <td>np.log(Bsal) ~ Sex + Senior + Educ + Exper + n...</td>\n",
+       "      <td>-189.063</td>\n",
+       "      <td>-173.867</td>\n",
+       "      <td>25.246</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>197</td>\n",
+       "      <td>np.log(Bsal) ~ Sex + Senior + Educ + Exper + n...</td>\n",
+       "      <td>-190.711</td>\n",
+       "      <td>-172.983</td>\n",
+       "      <td>22.202</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>56</td>\n",
+       "      <td>np.log(Bsal) ~ Sex + Senior + Educ + Exper + n...</td>\n",
+       "      <td>-188.139</td>\n",
+       "      <td>-170.411</td>\n",
+       "      <td>21.205</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>195</td>\n",
+       "      <td>np.log(Bsal) ~ Sex + Senior + Educ + Exper + n...</td>\n",
+       "      <td>-187.633</td>\n",
+       "      <td>-169.905</td>\n",
+       "      <td>21.012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>196</td>\n",
+       "      <td>np.log(Bsal) ~ Sex + Senior + Educ + Exper + n...</td>\n",
+       "      <td>-187.567</td>\n",
+       "      <td>-169.839</td>\n",
+       "      <td>20.987</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               formula      aic      bic  fvalue\n",
+       "53   np.log(Bsal) ~ Sex + Senior + Educ + Exper + n... -189.063 -173.867  25.246\n",
+       "197  np.log(Bsal) ~ Sex + Senior + Educ + Exper + n... -190.711 -172.983  22.202\n",
+       "56   np.log(Bsal) ~ Sex + Senior + Educ + Exper + n... -188.139 -170.411  21.205\n",
+       "195  np.log(Bsal) ~ Sex + Senior + Educ + Exper + n... -187.633 -169.905  21.012\n",
+       "196  np.log(Bsal) ~ Sex + Senior + Educ + Exper + n... -187.567 -169.839  20.987"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "aics = []\n",
     "bics = []\n",
@@ -383,7 +478,16 @@
     "    bics.append(model_fit.bic)\n",
     "    fvalues.append(model_fit.fvalue)\n",
     "\n",
-    "dfcp = pd.DataFrame({'formula': formulae, 'aic': aics, 'bic': bics, 'fvalue': fvalues})\n"
+    "\n",
+    "kwargs = {\n",
+    "    'formula': formulae, \n",
+    "    'aic': aics, \n",
+    "    'bic': bics, \n",
+    "    'fvalue': fvalues,\n",
+    "}\n",
+    "dfcp = pd.DataFrame(kwargs)\n",
+    "\n",
+    "dfcp.sort_values(by='bic').head()"
    ]
   },
   {
